# ApexVeritasOS

./: .dockerignore  .env.example  .gitignore  A2A.md  Dockerfile  README.md  WHITEPAPER.md  alembic.ini  avos_demo.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apex_runtime/: __init__.py  audit.py  client.py  core.py  identity.py  main.py  middleware.py  policies.yaml
apex_runtime/policies/: default.yaml
avos_sdk/: __init__.py  avos_agent.py
avos_sdk/adapters/: __init__.py  core.py  crewai.py  langchain.py  openclaw.py
backend/: __init__.py  database.py  main.py
backend/core/: a2a.py  audit_chain.py  avid.py  config.py  constitution.py  events.py  logging.py  peer_attestations.py  policy_engine.py  rate_limiter.py  registry_crypto.py  reputation_metrics.py  security.py  signatures.py  trust_vector.py
backend/middleware/: firewall_middleware.py
backend/models/: __init__.py  entities.py
backend/routes/: __init__.py  a2a.py  agents.py  authorization.py  constitution.py  deps.py  events.py  external_onboarding.py  heartbeat.py  metrics.py  observatory.py  policies.py  registry.py  reputation.py  search.py  tasks.py  trust.py
backend/schemas/: __init__.py  a2a.py  agent.py  (+5 more)
dashboard/: app.js  dashboard.html  index.html
firewall/: action_firewall.py
migrations/: env.py  script.py.mako
scripts/: simulate_agents.py
sdk/: avos_agent.py
tests/: test_apex_runtime_authorize_action.py  test_apex_runtime_client.py  test_apex_runtime_service.py  test_api_endpoints.py  test_auth.py  test_firewall.py  test_reputation.py
(+14 files in other folders)
