[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avos-sdk"
version = "0.1.0"
description = "Python SDK for ApexVeritasOS (AVOS)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AVOS" }]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
signing = ["cryptography>=41"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["avos_sdk*", "sdk*"]

